<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Admin console</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_pet">Add dog</string>
    <string name="title_activity_list_pet">Dog list</string>
    <string name="lbl_AddPet">Add pet</string>
    <string name="lblListPet">Pets list</string>
    <string name="lbl_AboutApp">About App</string>
    <string name="lbl_Add">Add</string>
    <string name="lbl_PetName">Name</string>
    <string name="lbl_PetDesc">Comment</string>
    <string name="lbl_Kalbiya">Kalbiya</string>
    <string name="lbl_MoneyNeeded">Need money</string>
    <string name="lbl_HaveMoney">Already have money</string>
    <string name="lbl_PictLink">Picture Link</string>
    <string name="lbl_DeathDate">Death Date</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pet_info">PetInfo</string>
    <string name="title_activity_list_pet_activity_pager">Dogs list</string>
    <string name="lblListPetPager">Pet list slider</string>
    <string name="lbl_AddKalbiya">Add Kalbiya</string>
    <string name="title_activity_add_kalbiya">Add kennel</string>
    <string name="lbl_KalbiyaName">Name</string>
    <string name="lbl_KalbiyaPhone">Phone</string>
    <string name="lbl_RestPerson">Chief</string>
    <string name="lbl_RespPersonPhone">Chief Phone</string>
    <string name="lbl_PayPalAcc">PayPal email</string>
    <string name="title_activity_list_kalbiya">Kennels list</string>
    <string name="lbl_ListKalbiya">Kennels list</string>
    <string name="title_activity_add_pet_activity2">Add dog</string>
    <string name="title_activity_list_outdated">Outdated</string>
    <string name="title_activity_payments_list">PaymentsList</string>

</resources>
