<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnAddPet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_AddPet" />

    <Button
        android:id="@+id/btnListPet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblListPet" />

    <Button
        android:id="@+id/btnListPetPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblListPetPager" />

    <Button
        android:id="@+id/btnAboutApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_AboutApp" />

    <Button
        android:id="@+id/btnAddKalbiya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_AddKalbiya" />

    <Button
        android:id="@+id/btnListKalbiya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_ListKalbiya" />

</LinearLayout>