<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtKalbiyaName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_KalbiyaName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/editKalbiyaName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="10sp" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtKalbiyaPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_KalbiyaPhone"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/editKalbiyaPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtKalbiyaRespPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_RestPerson"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/editRespPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtRespPersonPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_RespPersonPhone"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/editRespPersonPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtPayPalAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_PayPalAcc"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/editPayPalAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="10sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAddKalbiya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_Add" />

</LinearLayout>