<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtPetName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_PetName"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/editPetName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textCapWords"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_PetDesc"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/editComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textCapSentences"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtKalbiya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_Kalbiya"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="10sp" />
        </LinearLayout>

        <Spinner
            android:id="@+id/editKalbiya"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtNeedMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_MoneyNeeded"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/editNeedMoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtHaveMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_HaveMoney"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/editHaveMoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName|numberDecimal"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_DeathDate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="         " />

            <TextView
                android:id="@+id/editDeathDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="horizontal" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

        </FrameLayout>

        <ImageView
            android:id="@+id/imgFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </FrameLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnAddPet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_Add" />

</LinearLayout>